feat: doxuya vsyakogo pizdec